# discord-bots

./: definitions.py  pyproject.toml
discord_bots/: app.py  bot.py
discord_bots/templates/: template.html
